--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,100;1,600&display=swap');
 
-:root{
-    --purple: purple; 
+:root {
+    --purple: purple;
     --dark-button: rgb(70, 2, 70);
     --black: #444;
     --light-color: #666;
-    --border: .1rem solid rgba(0,0,0,0.1);
+    --border: .1rem solid rgba(0, 0, 0, 0.1);
     --border-hover: 1rem solid rgba(--black);
-    --box-shadow: 0 .5rem 1rem rgba(0,0,0,0.1);
+    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
-*{
+* {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -19,37 +19,63 @@
     border: none;
     text-decoration: none;
     text-transform: capitalize;
-    transition: all 2s linear;
+    transition: all 0.5s linear;
     transform: widht none;
 }
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-padding-top: 5rem;
     scroll-behavior: smooth;
 }
-html::-webkit-scrollbar{
+
+html::-webkit-scrollbar {
     width: 1rem;
 }
-html::-webkit-scrollbar-track{
+
+html::-webkit-scrollbar-track {
     background: transparent;
 }
-html::-webkit-scrollbar-thumb{
+
+html::-webkit-scrollbar-thumb {
     background: var(--black);
 }
-/* Header */
-header nav{
+
+section{
+ padding: 5rem 9%;   
+}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 0.3rem;
+    border: none;
+    border-radius: 1rem;
+    background: var(--black);
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.7rem;
+    font-weight: 500;
+    }
+.btn:hover{
+background: var(--purple);
+box-shadow: 0 0 8px green;
+}    
+
+/*################ Header ################*/
+header nav {
     background: rgb(255, 146, 255);
     padding: 1.5rem 9%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-header nav .logo .navlogo{
+
+header nav .logo .navlogo {
     font-size: 2.5rem;
 }
-header nav .search-form{
+
+header nav .search-form {
     width: 50rem;
     height: 5rem;
     overflow: hidden;
@@ -57,17 +83,320 @@ header nav .search-form{
     background: #fff;
     display: flex;
     align-items: center;
-    border-radius: .5rem;
+    border-radius: 25px;
 }
-header nav .search-form input{
+
+header nav .search-form input {
     font-size: 1.6rem;
     padding: 0 1.2rem;
     width: 100%;
     height: 100%;
+    border-radius: 50px;
     text-transform: none;
-    color:var(--black);
+    color: var(--black);
 }
 
-header nav .search-form label{
+header nav .search-form label {
     font-size: 2.5rem;
+    padding-right: 1.5rem;
+    color: var(--black);
+    cursor: pointer;
+}
+
+header nav .search-form label:hover {
+    color: var(--purple);
+    text-shadow: 0 0 8px green;
+
+}
+
+header nav .navicon div,
+header nav .navicon a {
+    font-size: 2.5rem;
+    margin-left: 1.5rem;
+    color: var(--black);
+    cursor: pointer;
+}
+
+header nav .navicon div:hover,
+header nav .navicon a:hover {
+    color: var(--purple);
+    text-shadow: 0 0 8px green;
+}
+
+#search-btn {
+    display: none;
+}
+
+header .header-2 {
+    background: var(--purple);
+}
+
+header .header-2 .nav-2 {
+    text-align: center;
+}
+
+header .header-2 .nav-2 a {
+    color: #fff;
+    display: inline-block;
+    padding: 1.2rem;
+    font-size: 1.7rem;
+}
+
+header .header-2 .nav-2 a:hover {
+    background: var(--purple);
+    box-shadow: 0 0 8px  rgb(3, 248, 3);
+}
+
+.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    box-shadow: 0 0 8px black;
+}
+
+
+.button-nav {
+    text-align: center;
+    background: rgb(255, 146, 255);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    display: none;
+}
+
+.button-nav a {
+    border-radius: 50%;
+    font-size: 2.5rem;
+    color: #fff;
+    padding: 2rem;
+}
+
+.button-nav a:hover {
+    background-color: var(--purple);
+}
+
+/* Login Form */
+.login-form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 0, 234, 0.6);
+    position: fixed;
+    top:0;
+    right:-105%;
+    z-index: 10000;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+}
+
+.login-form-container form {
+    background-image: url("./../Assets/books/img_0.jpeg");
+    background-position: cover;
+    border: var(--border);
+    width: 40rem;
+    padding: 4rem;
+    box-shadow: var(--box-shadow);
+    border-radius: 2rem;
+    margin: 2rem;
+}
+
+.login-form-container form h3 {
+    font-size: 2.5 rem;
+    text-transform: uppercase;
+    color: var(--black);
+    text-align: center;
+}
+
+.login-form-container form span {
+    display: block;
+    font-size: 1.5rem;
+    padding-top: 1rem;
+}
+
+.login-form-container form .box {
+    width: 100%;
+    font-size: 1.6rem;
+    border: var(--border);
+    border-radius: 2rem;
+    padding: 1rem 1.2rem;
+    color: var(--black);
+    text-transform: none;
+}
+
+.login-form-container form .checkbox{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    padding: 1.2rem 0;
+}
+.login-form-container form label{
+font-size: 1.5rem;
+color: var(--light-color);
+cursor: pointer;
+}
+
+.login-form-container form .btn{
+    text-align: center;
+    width: 100%;
+    margin: 1.5rem 0;
+}
+
+.login-form-container form p{
+    padding-top: .8rem;
+    color: var(--light-color);
+    font-size: 1.5rem;
+}
+
+.login-form-container form a{
+    color: var(--purple);
+    text-decoration: underline;
+}
+.login-form-container #close-login{
+    position: absolute;
+    top: 1.5rem;
+    right: 2.5rem;
+    font-size: 5rem;
+    color: var(--black);
+    cursor: pointer;
+}
+.login-form-container.view{
+    right:0;
+    opacity: 1;
+}
+/* Home Section */
+.home{
+    background-image: url('../Assets/bg-img.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.home .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+.home .row .content{
+    text-align: center;
+}
+.home .row .content h3{
+    color: #fff;
+    font-size: 4.5rem;
+    text-shadow:  0 0 8px rgb(3, 248, 3);
+}
+.home .row .content p{
+    color: #fff;
+    font-size: 1.5rem;
+    text-shadow: 0 0 8px var(--black);
+    line-height: 2;
+    padding: 1rem o;
+}
+.home .row .content h3 span{
+    color: var(--purple);
+
+}
+.home .row .content{
+    flex: 1 1 42rem;
+}
+.home .row .bookSlide{
+    flex: 1 1 42rem;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.home .row .bookSlide a .img{
+    height: 25rem;
+}
+.home .row .bookSlide a:hover .img{
+   transform: scale(.9);
+}
+
+
+
+
+
+
+
+
+/* media queires */
+
+@media (max-width: 991px) {
+    html {
+        font-size: 55%;
+    }
+
+    .header-1 .header-2 {
+        padding: 2rem;
+    }
+
+    #search-btn {
+        display: inline-block;
+    }
+    section{
+        padding:3rem 2rem;   
+       }
+       
+}
+
+@media (max-width:768px) {
+    html {
+        scroll-padding-top: 0;
+    }
+
+    body {
+        padding-bottom: 6rem;
+    }
+
+    header .header-2 {
+        display: none;
+    }
+
+    header .header-1 {
+        box-shadow: var(--box-shadow);
+        position: relative;
+    }
+
+    header .header-1 .search-form {
+        position: absolute;
+        top: -115%;
+        right: 2rem;
+        width: 90%;
+        z-index: 1;
+        box-shadow: var(--box-shadow);
+        opacity: 0;
+    }
+
+    #search-btn {
+        display: inline-block;
+    }
+
+    header .header-1 .search-form.on {
+        top: 115%;
+        opacity: 1;
+    }
+    .home .row .content{
+        text-align: center;
+    }
+    .button-nav {
+        display: inline-block;
+    }
+    .home .row .content h3{ 
+        font-size: 3.5rem;
+
+    }
+}
+
+@media (max-width: 450px) {
+    html {
+        font-size: 50%;
+    }
+
+    .header-1 .header-2 {
+        padding: 2rem;
+    }
 }
