--- a/style/style.css
+++ b/style/style.css
@@ -299,6 +299,7 @@ header .header-2 .nav-2 a:hover {
     right: 0;
     opacity: 1;
 }
+
 /* REGISTER FORM */
 .reg-form-container {
     display: flex;
@@ -369,8 +370,6 @@ header .header-2 .nav-2 a:hover {
     margin: 1.5rem 0;
 }
 
-
-
 .reg-form-container #close-reg {
     position: absolute;
     top: 1.5rem;
@@ -384,23 +383,27 @@ header .header-2 .nav-2 a:hover {
     right: 0;
     opacity: 1;
 }
-/* DETAIL */
-.det-form-container {
+
+/*################DETAIL Section ################*/
+.det-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 0, 234, 0.6);
+    background-color: rgba(0, 0, 0, 0.493);
     position: fixed;
     top: 0;
     right: -105%;
-    z-index: 100000;
+    z-index: 10000;
     height: 100%;
     width: 100%;
     opacity: 0;
 }
-.det-form-container .box {
+
+.det-container .box {
     display: flex;
+    background: linear-gradient(-15deg, rgba(255, 0, 234) 30%, rgba(255, 131, 245) 30.1%);
     align-items: center;
+    justify-content: center;
     gap: 1.5rem;
     padding: 2rem 1rem;
     margin: 1rem 0;
@@ -410,38 +413,45 @@ header .header-2 .nav-2 a:hover {
     text-align: center;
 }
 
-.det-form-container .box:hover {
+.det-container .box:hover {
     border: var(--border-hover);
     box-shadow: 0 0 10px var(--purple);
 }
-.det-form-container .box {
-    padding: 2rem;
-    background: linear-gradient(-15deg, rgba(255, 0, 234) 30%, rgba(255, 131, 245) 30.1%);
-}
-.det-form-container .box  .content {
+
+.det-container .box .content {
     padding: 2.5rem;
 }
 
-.det-form-container .box .content h3 {
+.det-container .box .images img {
+    width: 25rem;
+}
+
+.det-container .box .content {
+    width: 50%;
+}
+
+.det-container .box .content h3 {
     font-size: 2rem;
     color: var(--black);
 }
-.det-form-container .box .content p{
+
+.det-container .box .content p {
     font-size: 1.5rem;
 }
-.det-form-container .box  .content .price {
+
+.det-container .box .content .price {
     font-size: 2.2rem;
     color: var(--black);
     padding-top: 1rem;
 }
 
-.det-form-container .box  .content .price span {
+.det-container .box .content .price span {
     font-size: 1.5rem;
     color: var(--purple);
     text-decoration: line-through;
 }
 
-.det-form-container #close-det {
+.det-container #close-det {
     position: absolute;
     top: 1.5rem;
     right: 2.5rem;
@@ -449,12 +459,11 @@ header .header-2 .nav-2 a:hover {
     color: var(--black);
     cursor: pointer;
 }
-.det-form-container.view {
+
+.det-container.view {
     right: 0;
-    opacity: 1;}
-
-
-  
+    opacity: 1;
+}
 
 /*################ HOME Section ################*/
 .home {
@@ -570,7 +579,6 @@ header .header-2 .nav-2 a:hover {
     height: 25rem;
 }
 
-
 .featured .featured-slide .box .icons {
 
     border-bottom: var(--border-hover);
@@ -581,7 +589,6 @@ header .header-2 .nav-2 a:hover {
     background: rgba(255, 0, 234, 0.6);
     z-index: 1;
     transform: translateY(-100%);
-
 }
 
 .featured .featured-slide .box:hover .icons {
@@ -678,7 +685,6 @@ header .header-2 .nav-2 a:hover {
 
 /*################ ARRIVALS Section ################*/
 
-
 .arrivals .arrivals-slide .box {
     display: flex;
     align-items: center;
@@ -711,7 +717,7 @@ header .header-2 .nav-2 a:hover {
 .arrivals .arrivals-slide .box .stars i {
     font-size: 1.5rem;
     color: var(--black);
-    
+
 }
 
 .arrivals .arrivals-slide .box .stars i:hover {
@@ -741,41 +747,46 @@ header .header-2 .nav-2 a:hover {
     text-decoration: line-through;
 }
 
-
 /*################ DEAL Section ################*/
 
-.deal{
+.deal {
     background-color: #67a6a8;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
-.deal .content{
+
+.deal .content {
     flex: 1 1 42rem;
 }
-.deal .content h3{
+
+.deal .content h3 {
     color: var(--purple);
     font-size: 1.5rem;
     padding-bottom: .5rem;
 }
-.deal .content h1{
+
+.deal .content h1 {
     color: var(--black);
     font-size: 4rem;
-    
+
 }
-.deal .content p{
+
+.deal .content p {
     color: var(--light-color);
     font-size: 1.4rem;
-  line-height: 2;
-  padding: 1rem 0;
+    line-height: 2;
+    padding: 1rem 0;
 }
-.deal .image{
+
+.deal .image {
     flex: 1 1 42rem;
 }
-.deal .image img{
+
+.deal .image img {
     width: 100%;
-   
+
 }
 
 /*################ REVIEW Section ################*/
@@ -783,11 +794,11 @@ header .header-2 .nav-2 a:hover {
 .reviews .reviews-slide .box {
     width: 30rem;
     height: 100%;
-border: var(--border);
-padding: 2rem;
-text-align: center;
-margin: 2rem 0;
-background: linear-gradient(25deg, gold 30%, goldenrod 30.1%);
+    border: var(--border);
+    padding: 2rem;
+    text-align: center;
+    margin: 2rem 0;
+    background: linear-gradient(25deg, gold 30%, goldenrod 30.1%);
 }
 
 .reviews .reviews-slide .box:hover {
@@ -795,23 +806,19 @@ background: linear-gradient(25deg, gold 30%, goldenrod 30.1%);
     box-shadow: 0 0 10px var(--purple);
 }
 
-
-.reviews .reviews-slide .box img{
-   border-radius: 50%;
+.reviews .reviews-slide .box img {
+    border-radius: 50%;
     border: var(--border);
     object-fit: cover;
     width: 7rem;
     height: 7rem;
 }
 
-
-
-
 .reviews .reviews-slide .box .stars i {
     padding-top: 1rem;
     font-size: 2.5rem;
     color: var(--black);
-    
+
 }
 
 .reviews .reviews-slide .box .stars i:hover {
@@ -824,7 +831,7 @@ background: linear-gradient(25deg, gold 30%, goldenrod 30.1%);
     padding: 1.5rem;
 }
 
-.reviews .reviews-slide .box  h3 {
+.reviews .reviews-slide .box h3 {
     font-size: 2.2rem;
     padding: .5rem 0;
     color: var(--black);
@@ -837,93 +844,105 @@ background: linear-gradient(25deg, gold 30%, goldenrod 30.1%);
     line-height: 2;
 }
 
-
 /*################ BOLGS Section ################*/
 .blogs .blogs-slide .box {
     width: 30rem;
     height: 100%;
-border: var(--border);
-padding: 2rem;
-margin: 2rem 0;
-text-align: center;
-background: linear-gradient(25deg,  #91ebee 30%,  #67a6a8 30.1%);
+    border: var(--border);
+    padding: 2rem;
+    margin: 2rem 0;
+    text-align: center;
+    background: linear-gradient(25deg, #91ebee 30%, #67a6a8 30.1%);
 }
-.blogs .blogs-slide .box:hover{
+
+.blogs .blogs-slide .box:hover {
     border: var(--border-hover);
     box-shadow: 0 0 10px var(--purple);
 }
-.blogs .blogs-slide .box .images{
+
+.blogs .blogs-slide .box .images {
 
     width: 100%;
     overflow: hidden;
 }
-.blogs .blogs-slide .box .images img{
-     object-fit: cover;
-     width: 100%;
-     height: 100%;
-    
- }
- .blogs .blogs-slide .box:hover .images img{
+
+.blogs .blogs-slide .box .images img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+}
+
+.blogs .blogs-slide .box:hover .images img {
     transform: scale(1.1);
- }
- .blogs .blogs-slide  .box .content {
+}
+
+.blogs .blogs-slide .box .content {
     padding: 1.5rem;
 }
 
-.blogs .blogs-slide  .box  h3 {
+.blogs .blogs-slide .box h3 {
     font-size: 2.2rem;
     padding-bottom: .5rem;
     color: var(--black);
 }
 
- .blogs .blogs-slide .box p {
+.blogs .blogs-slide .box p {
     font-size: 1.4rem;
     color: var(--light-color);
     padding-bottom: .5rem;
     line-height: 2;
 }
+
 /*################ FOOTER Section ################*/
 
-.footer{
+.footer {
     background: rgb(255, 146, 255);
 }
-.footer .box-container{
+
+.footer .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 1.5rem;
 
 }
-.footer .box-container .box h3{
+
+.footer .box-container .box h3 {
     font-size: 2.2rem;
     color: var(--black);
     padding: 1rem 0;
 }
-.footer .box-container .box a{
+
+.footer .box-container .box a {
     display: block;
     font-size: 1.4rem;
     color: var(--light-color);
     padding: 1rem 0;
 }
-.footer .box-container .box a i{
+
+.footer .box-container .box a i {
     color: var(--purple);
     padding-right: .5rem;
 }
-.footer .box-container .box a:hover i{
-transform: scale(1.2);
-padding-right: 2rem;
-text-shadow: 0 0 5px rgb(3, 248, 3);
+
+.footer .box-container .box a:hover i {
+    transform: scale(1.2);
+    padding-right: 2rem;
+    text-shadow: 0 0 5px rgb(3, 248, 3);
 }
 
-.footer .box-container .box .map{
+
+.footer .box-container .box .map {
     width: 50%;
     height: 50%;
 }
 
-.footer .share{
+.footer .share {
     padding: 1rem 0;
     text-align: center;
 }
-.footer .share a{
+
+.footer .share a {
     height: 5rem;
     width: 5rem;
     line-height: 5rem;
@@ -931,13 +950,15 @@ text-shadow: 0 0 5px rgb(3, 248, 3);
     border-radius: 50%;
     color: #fff;
     background: var(--black);
-margin: 0 .3rem;
+    margin: 0 .3rem;
 }
-.footer .share a:hover{
+
+.footer .share a:hover {
     background: var(--purple);
-    box-shadow:0 0 5px rgb(3, 248, 3) ;
+    box-shadow: 0 0 5px rgb(3, 248, 3);
 }
-.footer .credits{
+
+.footer .credits {
     border-top: var(--border);
     margin-top: 2rem;
     padding: 0 1rem;
@@ -946,11 +967,12 @@ margin: 0 .3rem;
     color: var(--light-color);
     text-align: center;
 }
-.footer .credits span{
+
+.footer .credits span {
     text-transform: uppercase;
-font-weight: bold;
+    font-weight: bold;
     color: var(--purple);
-    text-shadow:0 0 5px rgb(3, 248, 3) ;
+    text-shadow: 0 0 5px rgb(3, 248, 3);
 }
 
 /*################LOADER Section ################*/
@@ -961,20 +983,21 @@ font-weight: bold;
     height: 100%;
     width: 100%;
     z-index: 10000;
-    background: rgba(255, 131, 245) ;
-display: flex;
-align-items: center;
-justify-content: center;
+    background: rgba(255, 131, 245);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.loader-container.active{
+
+.loader-container.active {
     display: none;
 }
-.loader-container img{
+
+.loader-container img {
     width: 10rem;
     color: green;
 }
 
-/*################DETAIL Section ################*/
 
 
 
@@ -997,7 +1020,8 @@ justify-content: center;
     section {
         padding: 3rem 2rem;
     }
-    .footer .box-container .box .map{
+
+    .footer .box-container .box .map {
         height: 30%;
     }
 }
