--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,100;1,600&display=swap');
 
 :root {
-    --purple: purple;
-    --dark-button: rgb(70, 2, 70);
+    --purple: rgb(92, 81, 44);
+    --dark-button: rgb(105, 89, 37);
     --black: #444;
     --light-color: #666;
     --border: .1rem solid rgba(0, 0, 0, 0.1);
@@ -28,6 +28,7 @@ html {
     overflow-x: hidden;
     scroll-padding-top: 5rem;
     scroll-behavior: smooth;
+    background-color: #f7e895e3;
 }
 
 html::-webkit-scrollbar {
@@ -50,6 +51,7 @@ section {
     text-align: center;
     margin-bottom: 2rem;
     position: relative;
+
 }
 
 .heading::before {
@@ -62,6 +64,7 @@ section {
     height: 0.01rem;
     background: rgba(0, 0, 0, 0.1);
     z-index: -1;
+    
 }
 
 .heading span {
@@ -70,6 +73,7 @@ section {
     color: var(--purple);
     background: #fff;
     border: var(--border);
+     background-color: transparent;
 }
 
 .btn {
@@ -92,7 +96,7 @@ section {
 
 /*################ HEADER Section ################*/
 header nav {
-    background: rgb(255, 146, 255);
+    background: rgb(255, 208, 146);
     padding: 1.5rem 9%;
     display: flex;
     align-items: center;
@@ -171,8 +175,8 @@ header .header-2 .nav-2 a {
 }
 
 header .header-2 .nav-2 a:hover {
-    background: var(--purple);
-    box-shadow: 0 0 8px rgb(3, 248, 3);
+ 
+      filter: drop-shadow(0 0 8px rgb(3, 248, 3)) ;
 }
 
 .active {
@@ -181,13 +185,13 @@ header .header-2 .nav-2 a:hover {
     left: 0;
     right: 0;
     z-index: 1000;
-    box-shadow: 0 0 8px black;
+    text-shadow: (0 0 8px rgb(3, 248, 3));
 }
 
 
 .button-nav {
     text-align: center;
-    background: rgb(255, 146, 255);
+    background: rgb(255, 226, 146);
     position: fixed;
     bottom: 0;
     left: 0;
@@ -212,7 +216,7 @@ header .header-2 .nav-2 a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 0, 234, 0.6);
+    background-color: rgb(255, 208, 146);
     position: fixed;
     top: 0;
     right: -105%;
@@ -401,7 +405,7 @@ header .header-2 .nav-2 a:hover {
 
 .det-container .box {
     display: flex;
-    background: linear-gradient(-15deg, rgba(255, 0, 234) 30%, rgba(255, 131, 245) 30.1%);
+    background: linear-gradient(-15deg, rgb(255, 174, 0) 30%, rgba(255, 208, 146) 30.1%);
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
@@ -571,7 +575,7 @@ header .header-2 .nav-2 a:hover {
 
 .featured .featured-slide .box .images {
     padding: 1rem;
-    background: linear-gradient(15deg, rgba(255, 0, 234, 0.6) 30%, rgba(255, 131, 245, 0.6) 30.1%);
+    background: linear-gradient(15deg, rgba(255, 166, 0, 0.6) 30%, rgb(255, 208, 146) 30.1%);
 }
 
 .featured .featured-slide .box .images .imgf {
@@ -586,7 +590,7 @@ header .header-2 .nav-2 a:hover {
     top: 0;
     right: 0;
     left: 0;
-    background: rgba(255, 0, 234, 0.6);
+    background: rgba(255, 153, 0, 0.6);
     z-index: 1;
     transform: translateY(-100%);
 }
@@ -608,7 +612,7 @@ header .header-2 .nav-2 a:hover {
 }
 
 .featured .featured-slide .box .content {
-    background: rgba(255, 0, 234);
+    background: rgb(255, 174, 0);
     padding: 1.5rem;
 }
 
@@ -704,7 +708,7 @@ header .header-2 .nav-2 a:hover {
 
 .arrivals .arrivals-slide .box {
     padding: 1rem;
-    background: linear-gradient(-15deg, rgba(255, 0, 234, 0.6) 30%, rgba(255, 131, 245, 0.6) 30.1%);
+    background: linear-gradient(-15deg, rgba(255, 196, 0, 0.6) 30%, rgba(255, 222, 131, 0.6) 30.1%);
 }
 
 .arrivals .arrivals-slide .box .images .imgf {
@@ -897,7 +901,7 @@ header .header-2 .nav-2 a:hover {
 /*################ FOOTER Section ################*/
 
 .footer {
-    background: rgb(255, 146, 255);
+    background: rgb(255, 208, 146);
 }
 
 .footer .box-container {
@@ -983,7 +987,7 @@ header .header-2 .nav-2 a:hover {
     height: 100%;
     width: 100%;
     z-index: 10000;
-    background: rgba(255, 131, 245);
+    background: rgb(255, 212, 131);
     display: flex;
     align-items: center;
     justify-content: center;
