--- a/style/style.css
+++ b/style/style.css
@@ -471,7 +471,7 @@ header .header-2 .nav-2 a:hover {
 
 /*################ HOME Section ################*/
 .home {
-    background-image: url('../Assets/bg-img.jpg');
+    background-image: url('../assets/bg-img.jpg');
     background-size: cover;
     background-position: center;
 }
